# Modules/Cart/Dto/CreateUpdateCartItemItemDto.php
@@ -2,13 +2,23 @@
 
 namespace Modules\Cart\Dto;
 
-class AddItemDto
+class CreateUpdateCartItemItemDto
 {
     private int $productVendorCodeId;
+    private int $quantity;
 
-    public function __construct(int $productVendorCodeId)
+    public function __construct(int $productVendorCodeId, int $quantity)
     {
         $this->productVendorCodeId = $productVendorCodeId;
+        $this->quantity = $quantity;
+    }
+
+    /**
+     * @return int
+     */
+    public function getQuantity(): int
+    {
+        return $this->quantity;
     }
 
     /**
