# resources/swagger/openapi.json
@@ -17,6 +17,10 @@
             "description": "Registration, login, logout"
         },
         {
+            "name": "User",
+            "description": "Operations with user"
+        },
+        {
             "name": "Product",
             "description": "Product operations"
         },
@@ -258,6 +262,79 @@
                 "responses": {
                     "200": {
                         "description": "A JSON array of products",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "array"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "summary": "Info about authenticated user",
+                "tags": [
+                    "User"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A JSON array of user info",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "array"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "summary": "Update user's info",
+                "tags": [
+                    "User"
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "surname": {
+                                        "type": "string"
+                                    },
+                                    "patronymic": {
+                                        "type": "string"
+                                    },
+                                    "login": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "phone": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "A JSON array of user info",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -598,16 +675,12 @@
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "productId": {
-                                        "type": "integer"
-                                    },
-                                    "vendorCodeId": {
+                                    "productVendorCodeId": {
                                         "type": "integer"
                                     }
                                 },
                                 "required": [
-                                    "productId",
-                                    "vendorCodeId"
+                                    "productVendorCodeId"
                                 ]
                             }
                         }
@@ -636,17 +709,6 @@
                 "summary": "Update item's quantity by it's id in auth user's cart",
                 "tags": [
                     "Cart"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "style": "simple"
-                    }
                 ],
                 "requestBody": {
                     "content": {
